[project]
name = "ai-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "streamlit>=1.51.0",
    "streamlit-lottie",
    "textblob>=0.19.0",
]
